<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="21dp"
    tools:context=".DetallesMateriaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDetallesTitulo"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvIdMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        tools:text="12ASJDHA13"/>

    <TextView
        android:id="@+id/tvNombreMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        tools:text="Diseño de Apps"/>

    <TextView
        android:id="@+id/tvProfesorMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        tools:text="Perez Ramirez"/>

    <TextView
        android:id="@+id/tvDescripcionMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        tools:text="Desarrollar aplicaciones para Android"/>

    <TextView
        android:id="@+id/tvDiasMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        tools:text="Lunes, Martes, Viernes"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnActualizar"/>

        <Space
            android:layout_width="75dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEliminar"/>

    </LinearLayout>

</LinearLayout>